--- a/Leaguevine API quo js/static/css/style.css
+++ b/Leaguevine API quo js/static/css/style.css
@@ -3,6 +3,28 @@
 	box-sizing:border-box;
 }
 
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+#fade-in{
+        opacity:0;  /* make things invisible upon start */
+    -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+    -moz-animation:fadeIn ease-in 1;
+    animation:fadeIn ease-in 1;
+ 
+    -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+    -moz-animation-fill-mode:forwards;
+    animation-fill-mode:forwards;
+ 
+    -webkit-animation-duration:1s;
+    -moz-animation-duration:1s;
+    animation-duration:1s;
+        -webkit-animation-delay: 0.7s;
+        -moz-animation-delay: 0.7s;
+        animation-delay: 0.7s;
+}
+
 body {
 	font-size:100%;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
@@ -19,12 +41,8 @@ p {
 }
 a {
 	font-weight:bold;
-	color:#0fa000;
+	color:#000;
 	-webkit-transition:all .5s ease;
-}
-a:hover {
-	color:#ffb400;
-	background-color: #f4f4f4;
 }
 ul {
 	list-style:none;
