--- a/Mijn Eindtoets her/static/css/style.css
+++ b/Mijn Eindtoets her/static/css/style.css
@@ -33,8 +33,8 @@ body {
 	background-color: #fff;
 }
 h1 {
-	text-shadow: 1px 1px 1px #fff;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+	text-align:center;
 }
 p {
 
@@ -73,7 +73,7 @@ ul {
 		}
 
 		ul li a:hover {
-			background-color: #eee;
+			background-color: #003366;
 		}
 
 section img, video {
@@ -87,27 +87,57 @@ video {
 	width:100%;
 }
 
+td:nth-of-type(1) {
+	padding-left:150px;
+}
+
+th:nth-of-type(1) {
+	padding-left:150px;
+}
+
+tr:nth-child(even) { 
+	background-color:#DAE2F0; 
+	width:550px;
+}
+
+tr:nth-child(odd) { 
+	background-color:#F8F9FC; 
+	width:550px;
+}
+
+th { 
+	background:#003366; 
+	color:#fff;
+	padding-bottom:13.5px;
+	text-align:left;
+}
+
+td {
+	padding-bottom:7.5px;
+}
+
 table {
 	width:100%;
 	height:90%;
+	border-collapse: collapse;
 }
-thead tr {
-	background-color: #fff;
+tbody {
+	margin-right:140px;
 }
+
 th, td {
 	padding-top:1%;
 	font-size: 100%;
 }
 th {
 	font-weight: bold;
-	text-align:left;
 }
 button {
 	font-weight: bold;
 	display: inline-block;
-	background:#eee;
+	background:#000;
 	padding:5px 10px;
-	color:#333;
+	color:#fff;
 	text-decoration: none;
 	border-radius: 5px;
 	-webkit-transition:all .2s ease;
@@ -117,18 +147,18 @@ button a {
 	text-decoration:none;
 }
 button:hover {
-	background:#000;
+	background:#003366;
+	color:#fff;
 }
-button a:hover {
+button:hover {
 	color:#fff;
 }
 
 a {
 	font-weight: bold;
 	display: inline-block;
-	background:#eee;
 	padding:5px 10px;
-	color:#333;
+	color:#fff;
 	text-decoration: none;
 	border-radius: 5px;
 	-webkit-transition:all .2s ease;
@@ -136,19 +166,24 @@ a {
 	text-decoration:none;
 }
 a:hover {
-	background:#000;
+	background:#003366;
 	color:#fff;
 }
 
 input {
 	font-weight: bold;
 	display: inline-block;
-	background:#eee;
+	background:#000;
 	padding:5px 10px;
-	color:#333;
+	color:#fff;
 	text-decoration: none;
 	border-radius: 5px;
 	border:none;
+}
+
+input:hover{
+	background:#003366;
+	color:#fff;
 }
 figure {
 	margin:0;
@@ -181,7 +216,7 @@ width:80px;
 height:50px;
 position:fixed;
 top:40%;
-right:50%;
+right:47.5%;
 }
 
 .bubblingG span {
@@ -190,7 +225,7 @@ vertical-align: middle;
 width: 10px;
 height: 10px;
 margin: 25px auto;
-background: #000000;
+background: #003366;
 -moz-border-radius: 50px;
 -moz-animation: bubblingG 1.3s infinite alternate;
 -webkit-border-radius: 50px;
@@ -231,7 +266,7 @@ animation-delay: 0.78s;
 0% {
 width: 10px;
 height: 10px;
-background-color:#000000;
+background-color:#003366;
 -moz-transform: translateY(0);
 }
 
@@ -248,7 +283,7 @@ background-color:#FFFFFF;
 0% {
 width: 10px;
 height: 10px;
-background-color:#000000;
+background-color:#003366;
 -webkit-transform: translateY(0);
 }
 
@@ -265,7 +300,7 @@ background-color:#FFFFFF;
 0% {
 width: 10px;
 height: 10px;
-background-color:#000000;
+background-color:#003366;
 -ms-transform: translateY(0);
 }
 
@@ -282,7 +317,7 @@ background-color:#FFFFFF;
 0% {
 width: 10px;
 height: 10px;
-background-color:#000000;
+background-color:#003366;
 -o-transform: translateY(0);
 }
 
@@ -299,7 +334,7 @@ background-color:#FFFFFF;
 0% {
 width: 10px;
 height: 10px;
-background-color:#000000;
+background-color:#003366;
 transform: translateY(0);
 }
 
@@ -319,9 +354,11 @@ header {
 }
 	header h1 {
 		font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-		color:#000;
+		color:#fff;
 		font-size: 1.6em;
-
+		text-align:center;
+		background-color:#003366;
+		padding:10px;
 	}
 
 /* Content section */
@@ -357,6 +394,8 @@ aside {
 
 .col {
 	padding: 0 .5em;
+	margin-top:15px;
+	margin-bottom:10px;
 }
 .row .row {
 	margin: 0 -.5em;
@@ -454,21 +493,23 @@ and (min-width : 1024px) {
 	}
 		nav ul li {
 			display:inline-block;
-			margin-right:.3em;
+
 		}
 			nav ul li a {
 				font-weight: bold;
 				display: inline-block;
-				background:#eee;
+				background:#000;
 				padding:5px 10px;
-				color:#333;
+				color:#fff;
 				text-decoration: none;
 				border-radius: 5px;
 				-webkit-transition:all .2s ease;
 				border:none;
+				width:591px;
+				text-align:center;
 			}
 			nav ul li a:hover {
-				background:#000;
+				background:#003366;
 				color:#fff;
 			}
 
